# ot2023-harjoitustyo

./: README.md  pyproject.toml  tasks.py
documentation/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
src/: action.py  index.py  mainloop.py  player.py  renderer.py  scenemanager.py
src/baseclasses/: card.py  cardcontainer.py  creature.py  enemy.py  scene.py
src/cardcontainers/: discardpile.py  drawpile.py  playerdeck.py  playerhand.py
src/cards/: cards.py
src/enemies/: enemy1.py
src/scenes/: fight.py
