[tool.poetry]
name = "ot2023-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Juho Lukka <Juholukka00@gmail.com>"]
readme = "README.md"
packages = [{include = "ot2023_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
pylint = "^2.17.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
